--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trabajo final integrador - book api con node.js",
   "main": "server.js",
   "scripts": {
-    "start": "npm start"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
